# friendly-octo-bassoon

./: .gitignore  README.md  pyproject.toml
home/: views.py
home/templates/home/: authorized.html  welcome.html
notes/migrations/: 0001_initial.py
smartnotes/: settings.py  urls.py
