[project]
name = "smartnotes"
version = "0.1.0"
description = ""
authors = [
    {name = "slastique",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
django = "^5.1.6"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
